add voice and last changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ main {
     backdrop-filter: blur( 2.5px );
     -webkit-backdrop-filter: blur( 15px );
     padding: 1rem;
+    gap: 8px;
 }
 
 .task_card--unfinished {
@@ -108,6 +109,10 @@ main {
     background-color: inherit;
 }
 
+.toast {
+    top: 50px;
+}
+
 
 /* Screen sizing */
 @media (min-width: 700px) {
@@ -129,5 +134,17 @@ main {
     #tasks-container {
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media (max-width: 396px) {
+    .task_card {
+        flex-direction: column;
+        gap: 8px;
+        padding: .5rem;
+    }
+
+    main {
+        padding: 5rem .5rem 3rem .5rem;
     }
 }
